--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- for homework1 -->
 <!DOCTYPE html>
 <html>
     <head>
@@ -8,7 +9,7 @@
         </head>
 
     <body>
-        <section> <!-- section 1 --> <!-- section 1 -->
+        <section> <!-- section 1 --> 
             <h1>Atlas Studio</h1>
             <p><b>Modern Web Studio</b></p>
         </section>
