--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <title>Atlas Studio</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles/style.css">
         </head>
 
     <body>
-        <section> <!-- section 1 --> <!-- section 1 -->
+        <section> <!-- section 1 : Hero image> -->
+            
             <h1>Atlas Studio</h1>
             <p><b>Modern Web Studio</b></p>
         </section>
