--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
     <head>
         <!-- TODO: add tags -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+
+
         <title>Atlas Studio</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,10 +15,38 @@
         </head>
 
     <body>
+        <main>
+
+
+
+
+
+        <div class="menu">
+            <img class="svg-menu" src="icons/icon-menu.svg" alt="Иконка меню">
+
+
+        </div>
+
+
+        
+
+
+
         <section> <!-- section 1 : Hero image> -->
+
             
-            <h1>Atlas Studio</h1>
-            <p><b>Modern Web Studio</b></p>
+            <div class="hero_bg_image">
+                <img src="https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80" alt="background">
+                <div>
+
+
+
+                </div>
+
+            </div>
+            <h1>Mod Studio</h1>
+            <p class="s1"><b>Modern Web Studio</b></p>
+
         </section>
 
         <section> <!-- section 2 -->
@@ -105,5 +139,6 @@
             </div>
             <img src="" alt="">
         </section> 
+    </main>
     </body>
 </html>
