Поправлены теги и добавлены изображения
Поправил теги, убрал декорирование, добавил картинки

--- a/index.html
+++ b/index.html
@@ -6,103 +6,146 @@
         <title>Atlas Studio</title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        </head>
+    </head>
 
     <body>
-        <section> <!-- section 1 --> 
-            <h1>Atlas Studio</h1>
-            <p><b>Modern Web Studio</b></p>
-        </section>
+        <main>
+            <!-- Hero section -->
+            <section>  
+                <img src="img/hero-image.jpg" alt="Фон с диваном">
+                <!-- ссылка на картинку https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80   -->
+                <h1>Atlas Studio</h1>
+                <h3>Modern Web Studio</h3>
+            </section>
 
-        <section> <!-- section 2 -->
-            <h2>Biography</h2>
-            <h3>Katya Mills</h3>
-            <p>
-                Art Director<br>
-                Scenography / Styling / Creative Photography / Design
-            </p>
-            <figure>
-                <blockquote>
-                    <p>“The more I deal with the work as something that is my own, as something that is personal, the more successful it is.”</p>
-                </blockquote>
-            </figure>
-        </section>
+            <!-- section 2 - 2 columns -->
+            <section>
+                <!-- first column -->
+                <img src="img/walking-woman.jpg" alt="Босая женщина уходит в закат">
+                <!-- ссылка на изображение https://images.unsplash.com/photo-1490505658643-e96d613eb642?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
+                <!-- second column -->
+                <div>
+                    <h2>Biography</h2>
+                    <h3>Katya Mills</h3>
+                    <p>
+                        Art Director<br>
+                        Scenography / Styling / Creative Photography / Design
+                    </p>
+                    <blockquote>
+                        <p>“The more I deal with the work as something that is my own, as something that is personal, the more successful it is.”</p>
+                    </blockquote>
+                </div>
+            </section>
 
-        <section> <!-- section 3 -->
-            <h2>Designers</h2>
-            <div> <!-- select article -->
-                <article>
-                    <img src="" alt="">
+            <!-- section 3 - 2 columns -->
+            <section>
+                <h2>Designers</h2>
+                <!-- first column -->
+                <div> 
+                    <img src="img/woman-in-the-hat.jpg" alt="Девушка в шапке">
+                    <!-- ссылка на фото https://images.unsplash.com/photo-1459201062043-6f30fd792f08?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
                     <h3>Jess Wonder</h3>
-                    <p><b>From</b>/ Be more flower <br>
-                       <b>Skills</b>/ Design Strategy / Marketing
+                    <p>From/ Be more flower <br>
+                       Skills/ Design Strategy / Marketing
                     </p>
-                </article>
-            </div>
-            <div>
-                <article>
-                    <img src="" alt="">
-                    <h3>Kameron Clein</h3>
-                    <p><b>From</b>/ Be more flower<br>
-                    <b>Skills</b>/ Design Strategy / Marketing
-                    </p>
-                </article>
-            </div>
-            <div>
-                <article>
-                    <img src="" alt="">
-                    <h3>LOUISSE RED</h3>
-                    <p><b>From</b>/ Be more flower<br>
-                    <b>Skills</b>/ Design Strategy / Marketing
-                    </p>
-                </article>
-            </div>
-        </section>
-        <section> <!-- section 4 -->
-            <h2>Testimonials</h2>
-            <ul>
-                <li>
-                    <p>Creativity</p>
-                    <a href="www.whitepapers.com">www.whitepapers.com</a>
-                </li>
-                <li>
-                    <p>Creativity</p>
-                    <a href="www.whitepapers.com">www.whitepapers.com</a>
-                </li>
-                <li>
-                    <p>Website</p>
-                    <a href="www.whitepapers.com">www.whitepapers.com</a>
-                </li>
-            </ul>
-            <img src="" alt="">
-            <article>
-                <p>I just really want to do good work and work with some great people, people who challange me.</p>
-                <img src="" alt="">
-            </article>
-        </section>
+                </div>
+                <!-- second column -->
+                <div>
+                    <article>
+                        <img src="img/transparent-folder.jpg" alt="Прозрачная папка">
+                        <!-- ссылка на фото  https://images.unsplash.com/photo-1507831041068-539748fc3c3b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1970&q=80 -->
+                        <h3>Kameron Clein</h3>
+                        <p>From/ Be more flower<br>
+                           Skills/ Design Strategy / Marketing
+                        </p>
+                    </article>
+                </div>
+                <div>
+                    <article>
+                        <img src="img/notepad-and-glasses.jpg" alt="Блокнот и очки">
+                        <!-- ссылка на фото  https://images.unsplash.com/photo-1531346724132-8e2e298435e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
+                        <h3>LOUISSE RED</h3>
+                        <p>From/ Be more flower<br>
+                           Skills/ Design Strategy / Marketing
+                        </p>
+                    </article>
+                </div>
+            </section>
 
-        <section> <!-- section 5 -->
-            <h2>Strong points</h2>
-            <img src="" alt="">
-            <img src="" alt="">
-            <div>
-                <h4>Strengths</h4>
-                <ul>
-                    <li>Interiors</li>
-                    <li>Outdoors</li>
-                    <li>Portraits</li>
-                    <li>Styling</li>
-                    <li>Events</li>
-                    <li>Architecture</li>
-                    <li>Design</li>
-                    <li>Celebrations</li>
-                    <li>Artistic</li>
-                    <li>Fashion</li>
-                    <li>Nature</li>
-                    <li>Creativity</li>
-                </ul>
-            </div>
-            <img src="" alt="">
-        </section> 
+            <!-- section 4 - 3 columns-->
+            <section>
+                <h2>Testimonials</h2>
+                <!-- first column -->
+                <div>
+                    <ul>
+                        <li>
+                            <h3>Creativity</h3>
+                            <a href="www.whitepapers.com">www.whitepapers.com</a>
+                        </li>
+                        <li>
+                            <h3>Creativity</h3>
+                            <a href="www.whitepapers.com">www.whitepapers.com</a>
+                        </li>
+                        <li>
+                            <h3>Website</h3>
+                            <a href="www.whitepapers.com">www.whitepapers.com</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- second column -->
+                <div>
+                    <img src="img/cafe.jpg" alt="Кафе">
+                    <!-- ссылка на фото  https://images.unsplash.com/photo-1567880905822-56f8e06fe630?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1935&q=80 -->
+                </div>
+                
+                <!-- third column -->
+                <div>
+                    <article>
+                        <p>I just really want to do good work and work with some great people, people who challange me.</p>
+                        <img src="img/string-bag.jpg" alt="Книга в авоське">
+                        <!-- ссылка на фото https://images.unsplash.com/photo-1603306009000-96fd2a39d0b8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80  -->
+                    </article>
+                </div>
+            </section>
+
+            <!-- section 5 - 3 columns -->
+            <section>
+                <h2>Strong points</h2>
+                <!-- first column -->
+                <div>
+                    <img src="img/laptop.jpg" alt="Ноутбук на столе">
+                    <!-- ссылка на фото  https://images.unsplash.com/photo-1476365518243-f738bf58443d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
+                    <img src="img/armchair.jpg" alt="Кресло с подушками">
+                    <!-- ссылка на фото  https://images.unsplash.com/photo-1532372576444-dda954194ad0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
+                </div>
+
+                <!-- second column -->
+                <div>
+                    <h4>Strengths</h4>
+                    <ul>
+                        <li>Interiors</li>
+                        <li>Outdoors</li>
+                        <li>Portraits</li>
+                        <li>Styling</li>
+                        <li>Events</li>
+                        <li>Architecture</li>
+                        <li>Design</li>
+                        <li>Celebrations</li>
+                        <li>Artistic</li>
+                        <li>Fashion</li>
+                        <li>Nature</li>
+                        <li>Creativity</li>
+                    </ul>
+                </div>
+
+                <!-- third column -->
+                <div>
+                    <img src="img/armchair.jpg" alt="Кресло с подушками">
+                    <!-- ссылка на фото  https://images.unsplash.com/photo-1532372576444-dda954194ad0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
+                </div>
+                
+            </section> 
+        </main>
     </body>
 </html>
