--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <!-- Hero section -->
             <section class="hero-section">
                 <div class="hero-image">
-                    <!-- <img class="hero-image" src="img/hero-image.jpg" alt="Фон с диваном"> -->
+                    <img class="hero-image" src="img/hero-image.jpg" alt="Фон с диваном">
                  <!-- ссылка на картинку https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80   -->
                  <h1>Atlas Studio</h1>
                  <h3>Modern Web Studio</h3>                   
