--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
             <!-- Hero section -->
             <section class="hero-section">
                 <div class="hero-image">
-                    <img class="hero-image" src="img/hero-image.jpg" alt="Фон с диваном">
-                 <!-- ссылка на картинку https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80   -->
-                 <h1>Atlas Studio</h1>
-                 <h3>Modern Web Studio</h3>                   
+                    <!-- <img class="hero-image" src="img/hero-image.jpg" alt="Фон с диваном"> -->
+                     <!-- ссылка на картинку https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80   -->
+
+                    <div class="hero-text">
+                        <h1>Atlas Studio</h1>
+                        <h3>Modern Web Studio</h3>
+
+                    </div>
+                 
                     
 
 
