Внесены правки по комментариям

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
     <head>
         <!-- TODO: add tags -->
-        <title>Atlas Studio</title>
         <meta charset="utf-8" />
+        <title>Atlas Studio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
 
@@ -32,7 +32,7 @@
                         Scenography / Styling / Creative Photography / Design
                     </p>
                     <blockquote>
-                        <p>“The more I deal with the work as something that is my own, as something that is personal, the more successful it is.”</p>
+                        “The more I deal with the work as something that is my own, as something that is personal, the more successful it is.”
                     </blockquote>
                 </div>
             </section>
@@ -41,35 +41,33 @@
             <section>
                 <h2>Designers</h2>
                 <!-- first column -->
-                <div> 
+                <figure> 
                     <img src="img/woman-in-the-hat.jpg" alt="Девушка в шапке">
                     <!-- ссылка на фото https://images.unsplash.com/photo-1459201062043-6f30fd792f08?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
                     <h3>Jess Wonder</h3>
                     <p>From/ Be more flower <br>
                        Skills/ Design Strategy / Marketing
                     </p>
-                </div>
+                </figure>
                 <!-- second column -->
-                <div>
-                    <article>
-                        <img src="img/transparent-folder.jpg" alt="Прозрачная папка">
-                        <!-- ссылка на фото  https://images.unsplash.com/photo-1507831041068-539748fc3c3b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1970&q=80 -->
-                        <h3>Kameron Clein</h3>
-                        <p>From/ Be more flower<br>
-                           Skills/ Design Strategy / Marketing
-                        </p>
-                    </article>
-                </div>
-                <div>
-                    <article>
-                        <img src="img/notepad-and-glasses.jpg" alt="Блокнот и очки">
-                        <!-- ссылка на фото  https://images.unsplash.com/photo-1531346724132-8e2e298435e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
-                        <h3>LOUISSE RED</h3>
-                        <p>From/ Be more flower<br>
-                           Skills/ Design Strategy / Marketing
-                        </p>
-                    </article>
-                </div>
+
+                <figure>
+                    <img src="img/transparent-folder.jpg" alt="Прозрачная папка">
+                    <!-- ссылка на фото  https://images.unsplash.com/photo-1507831041068-539748fc3c3b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1970&q=80 -->
+                    <h3>Kameron Clein</h3>
+                    <p>From/ Be more flower<br>
+                        Skills/ Design Strategy / Marketing
+                    </p>
+                </figure>
+
+                <figure>
+                    <img src="img/notepad-and-glasses.jpg" alt="Блокнот и очки">
+                    <!-- ссылка на фото  https://images.unsplash.com/photo-1531346724132-8e2e298435e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
+                    <h3>LOUISSE RED</h3>
+                    <p>From/ Be more flower<br>
+                        Skills/ Design Strategy / Marketing
+                    </p>
+                </figure>          
             </section>
 
             <!-- section 4 - 3 columns-->
@@ -77,20 +75,16 @@
                 <h2>Testimonials</h2>
                 <!-- first column -->
                 <div>
-                    <ul>
-                        <li>
-                            <h3>Creativity</h3>
-                            <a href="www.whitepapers.com">www.whitepapers.com</a>
-                        </li>
-                        <li>
-                            <h3>Creativity</h3>
-                            <a href="www.whitepapers.com">www.whitepapers.com</a>
-                        </li>
-                        <li>
-                            <h3>Website</h3>
-                            <a href="www.whitepapers.com">www.whitepapers.com</a>
-                        </li>
-                    </ul>
+                    <h3>Creativity</h3>
+                    <a href="www.whitepapers.com">www.whitepapers.com</a>
+                </div>
+                <div>
+                    <h3>Creativity</h3>
+                    <a href="www.whitepapers.com">www.whitepapers.com</a>
+                </div>
+                <div>
+                    <h3>Website</h3>
+                    <a href="www.whitepapers.com">www.whitepapers.com</a>
                 </div>
 
                 <!-- second column -->
@@ -116,6 +110,8 @@
                 <div>
                     <img src="img/laptop.jpg" alt="Ноутбук на столе">
                     <!-- ссылка на фото  https://images.unsplash.com/photo-1476365518243-f738bf58443d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
+                </div>
+                <div>             
                     <img src="img/armchair.jpg" alt="Кресло с подушками">
                     <!-- ссылка на фото  https://images.unsplash.com/photo-1532372576444-dda954194ad0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
                 </div>
