--- a/book.html
+++ b/book.html
@@ -7,54 +7,57 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,800;1,400&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="book/book-style.css">
+        <link rel="stylesheet" href="styles/book-style.css">
         <title>Текст книги Властелин Колец</title>
     </head>
     <body>
-        <header>
-            <h1>Автор, Дж.Р.Р.</h1>
-            <p>
-                Толкин, профессор Оксфордского университета, специалист по древнему и средневековому английскому языку, создал удивительный мир - Средиземье, который вот уже без малого пятьдесят лет неодолимо влечет к себе миллионы читателей.
-            </p>
+        <main>
+            <article class="about">
+                <h2 class="autor">Автор, Дж.Р.Р.</h2>
+                <p>
+                    Толкин, профессор Оксфордского университета, специалист по древнему и средневековому английскому языку, создал удивительный мир - Средиземье, который вот уже без малого пятьдесят лет неодолимо влечет к себе миллионы читателей.
+                </p>
+            </article>
 
             <!-- оглавление   -->
-            <nav> 
-                <h2>Книга Пятая</h2>
-                <ul>
-                    <li>Глава 1 Минас Тирит</li>
-                    <li>Глава 2 Выбор Арагорна</li>
-                    <li>Глава 3 Рохан собирает войска</li>
-                </ul>
-            </nav>
-        </header>
 
-        <main>        
-            <section>
+            <h1>Книга Пятая</h1>
+            <ul class="nav">
+                <li><a href="#chapter1">Глава 1 Минас Тирит</a></li>
+                <li><a href="#chapter2">Глава 2 Выбор Арагорна</a></li>
+                <li><a href="#chapter3">Глава 3 Рохан собирает войска</a></li>
+            </ul>
+
+            <article>
                 <h2 id="chapter1">Глава 1 Минас Тирит</h2>
-                <p> <!-- Пиппин выглянул курсив -->
-                    <span class="italic">Пиппин выглянул</span> из-под плаща Гэндальфа. Он никак не мог понять, во сне или наяву свистит в ушах черный ночной ветер, медленно плывет зубчатая тень гор далеко справа, во сне или наяву качается у него над головой звездное небо. Он пытался вспомнить, что с ним и где он, но мысли путались, отдельные картины сменяли друг друга.
+                <p>
+                    <!-- Пиппин выглянул курсив -->
+                    <i>Пиппин выглянул</i> из-под плаща Гэндальфа. Он никак не мог понять, во сне или наяву свистит в ушах черный ночной ветер, медленно плывет зубчатая тень гор далеко справа, во сне или наяву качается у него над головой звездное небо. Он пытался вспомнить, что с ним и где он, но мысли путались, отдельные картины сменяли друг друга.
                 </p>
-                <p> <!-- Яркий желтый огонь жирный -->
-                    <span class="bold">Яркий желтый огонь</span> в темном небе заставил Пиппина съежиться от страха. Зачем Гэндальф везет его в это страшное, там, впереди? Он протер глаза. На востоке всходила луна. Значит, они будут скакать и скакать, мчаться сквозь ночь бесконечно долго.
+                <p>
+                    <!-- Яркий желтый огонь жирный -->
+                    <b>Яркий желтый огонь</b> в темном небе заставил Пиппина съежиться от страха. Зачем Гэндальф везет его в это страшное, там, впереди? Он протер глаза. На востоке всходила луна. Значит, они будут скакать и скакать, мчаться сквозь ночь бесконечно долго.
                 </p>
-
-            </section>
+            </article>
         
-            <section>
+            <article>
                 <h2 id="chapter2">Глава 2 Выбор Арагорна</h2>
                 <p>Когда стих топот копыт Сполоха, уносящего Гэндальфа и Пиппина, Мерри вернулся к Арагорну.</p>
-                <p> <!-- Всадникам не до меня жирный -->
-                    До сих пор от меня было немного толку, но я все-таки не какая-нибудь безделушка. <span class="bold">Всадникам не до меня</span>, хотя их Правитель и обещал, что мы поговорим с ним о Шире после возвращения.
+                <p>
+                    <!-- Всадникам не до меня жирный -->
+                    До сих пор от меня было немного толку, но я все-таки не какая-нибудь безделушка. <b>Всадникам не до меня</b>, хотя их Правитель и обещал, что мы поговорим с ним о Шире после возвращения.
                 </p>
 
-            </section>
+            </article>
         
-            <section>
+            <article>
                 <h2 id="chapter3">Глава 3 Рохан собирает войска</h2>
-                <p> <!-- Ему было интересно в незнакомой стране курсив --> 
-                    Мерри с изумлением озирался по сторонам. <span class="italic">Ему было интересно в незнакомой стране.</span> Это был край без неба; в туманной дымке глаз различал только горы, каменная стена вставала за стеной, меж ними разверзались пропасти, заполненные туманом. От могучих водопадов воздух тихо звенел, шумели деревья, стучали по камням копыта. <span class="underline">Раньше Мерри любил слушать о горах, думать о них, но теперь, когда горные хребты вздымались вокруг под самые небеса, он чувствовал себя неуютно, живо ощущая исполинскую тяжесть, гнетущую грудь Средиземья.</span> Слишком они были большие; глядя на них, хотелось оказаться в маленькой комнатке возле камина.
-                </p> <!-- Раньше Мерри любил слушать о горах, думать о них, но теперь, когда горные хребты вздымались вокруг под самые небеса, он чувствовал себя неуютно, живо ощущая исполинскую тяжесть, гнетущую грудь Средиземья. подчёркнутый --> 
-            </section>
+                <p>
+                    <!-- Ему было интересно в незнакомой стране курсив -->
+                    <!-- Раньше Мерри любил слушать о горах, думать о них, но теперь, когда горные хребты вздымались вокруг под самые небеса, он чувствовал себя неуютно, живо ощущая исполинскую тяжесть, гнетущую грудь Средиземья. подчёркнутый -->
+                    Мерри с изумлением озирался по сторонам. <i>Ему было интересно в незнакомой стране.</i> Это был край без неба; в туманной дымке глаз различал только горы, каменная стена вставала за стеной, меж ними разверзались пропасти, заполненные туманом. От могучих водопадов воздух тихо звенел, шумели деревья, стучали по камням копыта. <u>Раньше Мерри любил слушать о горах, думать о них, но теперь, когда горные хребты вздымались вокруг под самые небеса, он чувствовал себя неуютно, живо ощущая исполинскую тяжесть, гнетущую грудь Средиземья.</u> Слишком они были большие; глядя на них, хотелось оказаться в маленькой комнатке возле камина.
+                </p>  
+            </article>
 
             <a href="#chapter1">Вернуться к главе 1</a>
         </main>   
