--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <img src="img/hero-image.jpg" alt="Фон с диваном">
                 <!-- ссылка на картинку https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80   -->
                 <h1>Atlas Studio</h1>
-                <h3>Modern Web Studio</h3>
+                <h2>Modern Web Studio</h2>
             </section>
 
             <!-- section 2 - 2 columns -->
@@ -41,14 +41,14 @@
             <section>
                 <h2>Designers</h2>
                 <!-- first column -->
-                <figure> 
+                <div> 
                     <img src="img/woman-in-the-hat.jpg" alt="Девушка в шапке">
                     <!-- ссылка на фото https://images.unsplash.com/photo-1459201062043-6f30fd792f08?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
                     <h3>Jess Wonder</h3>
                     <p>From/ Be more flower <br>
                        Skills/ Design Strategy / Marketing
                     </p>
-                </figure>
+                </div>
                 <!-- second column -->
 
                 <figure>
@@ -95,11 +95,9 @@
                 
                 <!-- third column -->
                 <div>
-                    <article>
-                        <p>I just really want to do good work and work with some great people, people who challange me.</p>
-                        <img src="img/string-bag.jpg" alt="Книга в авоське">
-                        <!-- ссылка на фото https://images.unsplash.com/photo-1603306009000-96fd2a39d0b8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80  -->
-                    </article>
+                    <p>I just really want to do good work and work with some great people, people who challange me.</p>
+                    <img src="img/string-bag.jpg" alt="Книга в авоське">
+                    <!-- ссылка на фото https://images.unsplash.com/photo-1603306009000-96fd2a39d0b8?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80  -->
                 </div>
             </section>
 
@@ -118,7 +116,7 @@
 
                 <!-- second column -->
                 <div>
-                    <h4>Strengths</h4>
+                    <h3>Strengths</h3>
                     <ul>
                         <li>Interiors</li>
                         <li>Outdoors</li>
