--- a/index.html
+++ b/index.html
@@ -51,23 +51,23 @@
                 </div>
                 <!-- second column -->
 
-                <figure>
+                <div>
                     <img src="img/transparent-folder.jpg" alt="Прозрачная папка">
                     <!-- ссылка на фото  https://images.unsplash.com/photo-1507831041068-539748fc3c3b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1970&q=80 -->
                     <h3>Kameron Clein</h3>
                     <p>From/ Be more flower<br>
                         Skills/ Design Strategy / Marketing
                     </p>
-                </figure>
+                </div>
 
-                <figure>
+                <div>
                     <img src="img/notepad-and-glasses.jpg" alt="Блокнот и очки">
                     <!-- ссылка на фото  https://images.unsplash.com/photo-1531346724132-8e2e298435e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
                     <h3>LOUISSE RED</h3>
                     <p>From/ Be more flower<br>
                         Skills/ Design Strategy / Marketing
                     </p>
-                </figure>          
+                </div>          
             </section>
 
             <!-- section 4 - 3 columns-->
