Перенос изменений из HW4

--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!-- for homework1 -->
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- TODO: add tags -->
-        <meta charset="utf-8" />
-        <title>Atlas Studio</title>
+    <head>     
+        <meta charset="utf-8">
+        <meta name="description" content="краткое описание">
+        <meta name="keywords" content="важные, ключевые, слова">
+        <link href="http://fonts.cdnfonts.com/css/butler" rel="stylesheet">    
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles/style.css">
+        <title>Atlas Studio</title>    
     </head>
 
     <body>
         <main>
             <!-- Hero section -->
-            <section>  
-                <img src="img/hero-image.jpg" alt="Фон с диваном">
-                <!-- ссылка на картинку https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80   -->
-                <h1>Atlas Studio</h1>
-                <h2>Modern Web Studio</h2>
+            <section class="hero-section">
+                <div class="hero-image">
+                    <!-- <img class="hero-image" src="img/hero-image.jpg" alt="Фон с диваном"> -->
+                    <!-- ссылка на картинку https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80   -->
+                    <div class="hero-text">
+                        <h1>Atlas Studio</h1>
+                        <h2>Modern Web Studio</h2>
+                    </div>                      
+                </div>
             </section>
 
             <!-- section 2 - 2 columns -->
