--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta name="description" content="краткое описание">
         <meta name="keywords" content="важные, ключевые, слова">
-        <link href="http://fonts.cdnfonts.com/css/butler" rel="stylesheet">    
+        <link href="http://fonts.cdnfonts.com/css/butler" rel="stylesheet">   
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
@@ -30,14 +30,15 @@
             </section>
 
             <!-- section 2 - 2 columns -->
-            <section>
+            <section id="bio">
+                <h2>Biography</h2>  
                 <!-- first column -->
-                <img src="img/walking-woman.jpg" alt="Босая женщина уходит в закат">
+                <img class="bio-img" src="img/walking-woman.jpg" alt="Босая женщина уходит в закат">
                 <!-- ссылка на изображение https://images.unsplash.com/photo-1490505658643-e96d613eb642?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
                 <!-- second column -->
-                <div>
-                    <h2>Biography</h2>
-                    <h3>Katya Mills</h3>
+                
+                <div class="bio-about">                    
+                    <h3>Katya <br> Mills</h3>
                     <p>
                         Art Director<br>
                         Scenography / Styling / Creative Photography / Design
@@ -46,10 +47,11 @@
                         “The more I deal with the work as something that is my own, as something that is personal, the more successful it is.”
                     </blockquote>
                 </div>
+                
             </section>
 
             <!-- section 3 - 2 columns -->
-            <section>
+            <section id="des">
                 <h2>Designers</h2>
                 <!-- first column -->
                 <div> 
