--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <!-- section 2 - 2 columns -->
             <section id="bio">
-                <h2>Biography</h2>  
+                <h2 class="bio">Biography</h2>  
                 <!-- first column -->
                 <img class="bio-img" src="img/walking-woman.jpg" alt="Босая женщина уходит в закат">
                 <!-- ссылка на изображение https://images.unsplash.com/photo-1490505658643-e96d613eb642?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
@@ -43,9 +43,11 @@
                         Art Director<br>
                         Scenography / Styling / Creative Photography / Design
                     </p>
+                    <div class="box"></div>
                     <blockquote>
                         “The more I deal with the work as something that is my own, as something that is personal, the more successful it is.”
                     </blockquote>
+                 
                 </div>
                 
             </section>
