Свёрстан блок 3 на флексах

--- a/index.html
+++ b/index.html
@@ -53,40 +53,61 @@
             </section>
 
             <!-- section 3 - 2 columns -->
-            <section id="des">
-                <h2>Designers</h2>
+            <section id="designers">
+                
                 <!-- first column -->
-                <div> 
+                <div class="big-photo"> 
                     <img src="img/woman-in-the-hat.jpg" alt="Девушка в шапке">
                     <!-- ссылка на фото https://images.unsplash.com/photo-1459201062043-6f30fd792f08?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
                     <h3>Jess Wonder</h3>
-                    <p>From/ Be more flower <br>
-                       Skills/ Design Strategy / Marketing
+                    <p><span class="bold">From/</span> Be more flower <br>
+                        <span class="bold">Skills/</span> Design Strategy / Marketing
                     </p>
                 </div>
                 <!-- second column -->
 
-                <div>
+                
+
+                <div class="photo">
+                    <h2 class="des">Designers</h2>
                     <img src="img/transparent-folder.jpg" alt="Прозрачная папка">
                     <!-- ссылка на фото  https://images.unsplash.com/photo-1507831041068-539748fc3c3b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1970&q=80 -->
                     <h3>Kameron Clein</h3>
-                    <p>From/ Be more flower<br>
-                        Skills/ Design Strategy / Marketing
+                    <p><span class="bold">From/</span> Be more flower<br>
+                        <span class="bold">Skills/</span> Design Strategy / Marketing
                     </p>
                 </div>
 
-                <div>
+                <div class="photo">
                     <img src="img/notepad-and-glasses.jpg" alt="Блокнот и очки">
                     <!-- ссылка на фото  https://images.unsplash.com/photo-1531346724132-8e2e298435e5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
-                    <h3>LOUISSE RED</h3>
-                    <p>From/ Be more flower<br>
-                        Skills/ Design Strategy / Marketing
+                    <h3>Louisse Red</h3>
+                    <p><span class="bold">From/</span> Be more flower<br>
+                        <span class="bold">Skills/</span> Design Strategy / Marketing
                     </p>
                 </div>          
             </section>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <!-- section 4 - 3 columns-->
-            <section>
+            <section id="test">
                 <h2>Testimonials</h2>
                 <!-- first column -->
                 <div>
@@ -117,7 +138,7 @@
             </section>
 
             <!-- section 5 - 3 columns -->
-            <section>
+            <section id="strong">
                 <h2>Strong points</h2>
                 <!-- first column -->
                 <div>
