--- a/index.html
+++ b/index.html
@@ -5,21 +5,32 @@
         <!-- TODO: add tags -->
         <meta charset="utf-8" />
         <title>Atlas Studio</title>
+        <meta name="description" content="краткое описание" />
+        <meta name="keywords" content="важные, ключевые, слова" />
+        <link href="http://fonts.cdnfonts.com/css/butler" rel="stylesheet" />  
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="styles/style.css" />
     </head>
 
     <body>
         <main>
             <!-- Hero section -->
-            <section>  
-                <img src="img/hero-image.jpg" alt="Фон с диваном">
-                <!-- ссылка на картинку https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80   -->
-                <h1>Atlas Studio</h1>
-                <h2>Modern Web Studio</h2>
+            <section id="hero-section">
+                <div class="hero-image">
+                    <img class="hero-image" src="img/hero-image.jpg" alt="Фон с диваном">
+                    <!-- ссылка на картинку https://images.unsplash.com/photo-1567016376408-0226e4d0c1ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80   -->
+                </div>
+                <div class="hero-text">
+                    <h1>Atlas Studio</h1>
+                    <h2>Modern Web Studio</h2>
+                </div>
             </section>
 
             <!-- section 2 - 2 columns -->
-            <section>
+            <section id="bio">
                 <!-- first column -->
                 <img src="img/walking-woman.jpg" alt="Босая женщина уходит в закат">
                 <!-- ссылка на изображение https://images.unsplash.com/photo-1490505658643-e96d613eb642?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80 -->
@@ -38,7 +49,7 @@
             </section>
 
             <!-- section 3 - 2 columns -->
-            <section>
+            <section id="designers">
                 <h2>Designers</h2>
                 <!-- first column -->
                 <div> 
@@ -71,7 +82,7 @@
             </section>
 
             <!-- section 4 - 3 columns-->
-            <section>
+            <section id="test">
                 <h2>Testimonials</h2>
                 <!-- first column -->
                 <div>
@@ -102,7 +113,7 @@
             </section>
 
             <!-- section 5 - 3 columns -->
-            <section>
+            <section id="strong">
                 <h2>Strong points</h2>
                 <!-- first column -->
                 <div>
